# quidem

./: .env  .gitignore  README.md  README_FRONTEND.md  fetch_candles.py  plot_candles.py  pyproject.toml  requirements.txt  requirements_api.txt  run.py  run_api.py  start_api.sh  start_frontend.bat
api/: README.md  __init__.py  auth.py  config.py  main.py
api/models/: __init__.py  schemas.py
api/routers/: __init__.py  config.py  control.py  history.py  status.py
api/services/: __init__.py  bot_service.py  redis_service.py
backtest/: BOCPD.py  GMMHMM.py  HF.py  __init__.py  backtest.py  backtester.py  kmeans.py  replay_5m_diagnostics.py
core/: centroids.csv  centroids_hmm.csv  config.py  logging_config.py  main.py  math_tools.py  ml_classifier.py  models.py  preheater.py  report_service.py  risk_manager.py  sol_hmm_latest.pkl  strategy.py  ui.py  xrp_hmm_latest.pkl
core/analysis/: __init__.py  bocpd.py  feature_engineering.py  filters.py  indicators.py  lib_indicators.py  monte_carlo.py  performance.py  raw_indicators.py  regime.py  transform.py
core/backup_old_files/: strategy.py
core/config/: __init__.py  exchange.py  mode.py  settings.py
core/engine/: alert_manager.py  bot.py  trader.py
core/models/: OnlineModels.py  __init__.py  cluster.py  hmm_engine.py  ml_models.py  online_models.py
core/risk/: __init__.py  manager.py  portfolio.py  position.py  position_sizer.py
core/services/: __init__.py  data_export.py  notifications.py  reporting.py
core/strategy/: __init__.py  analyzers.py  brain.py  signals.py
core/ui/: __init__.py  display.py  input.py  logger.py
core/utils/: __init__.py  data_validation.py  logging_config.py  mailer.py  math_utils.py  notifications.py  reporting.py  time_utils.py
core/web/: __init__.py  models.py  runner.py  server.py  state.py
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx  config.js  main.jsx
frontend/src/api/: config.js  control.js  history.js  (+2 more)
scripts/: liquidation_alert.py  pretrain.py  run_report.py
tests/: test_framework_core.py  test_new_modules.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
(+20 files in other folders)
